fixed director page alignment

--- a/client/src/styles/directorPage.css
+++ b/client/src/styles/directorPage.css
@@ -84,8 +84,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 200px;
-  margin-top: 40px;
+  height: 250px;
+  margin-top: -10px;
 }
 
 .b-container-1 > div {
